--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   /*primary colors*/
   --violet: #5a64e0;
+  --secondary-violet: #5a64e0;
   --light-violet: #939bf4;
   --light-violet-low-opacity: rgba(147, 155, 244, 0.2);
   --very-dark-blue: #19202d;
@@ -10,6 +11,21 @@
   --light-grey: #f4f6f8;
   --gray: #9daec2;
   --dark-grey: #6e8098;
+  --main-button-font: white;
+}
+
+[data-theme="dark"] {
+  --light-grey: #121721;
+  --white: #19202d;
+  --secondary-violet: white;
+  --light-violet-low-opacity: rgba(
+    110,
+    128,
+    152,
+    0.2
+  ); /*seconday button equivalent*/
+  --dark-grey: #f4f6f8; /*dark grey becomes light grey*/
+  --midnight: white;
 }
 
 body {
@@ -28,11 +44,15 @@ body {
   position: absolute; /* Position relative to the .top-nav-bar */
   top: 30px; /* Adjust as needed */
   left: 50px; /* Adjust as needed */
-  color: white; /* Ensure the text is readable */
+  color: white; /* color is fixed for this for both light and dark theme so not using variable */
 }
 .top-nav-bar h3:hover {
   color: var(--light-violet);
   cursor: pointer;
+}
+
+h4 {
+  color: var(--midnight);
 }
 
 .secondary-font-color {
@@ -81,7 +101,7 @@ h6 {
 }
 
 .form-check-label {
-  color: var(--very-dark-blue);
+  color: var(--midnight);
   padding: 8px;
   margin-right: 10px;
   border-radius: 5px;
@@ -103,11 +123,18 @@ h6 {
 
 .card {
   border: none;
+  background-color: var(--white);
+}
+.card-title {
+  color: var(--midnight);
+  transition: color 0.3s ease;
+}
+.small-card-homepage:hover,
+.card-title:hover {
+  cursor: pointer;
+  color: var(--gray);
 }
 
-.small-card-homepage:hover {
-  cursor: pointer;
-}
 .image-container {
   display: flex;
   justify-content: center;
@@ -134,7 +161,7 @@ h6 {
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
-  color: var(--white);
+  color: var(--main-button-font);
   background-color: var(--violet);
   border: none;
   transition: background-color 0.3s ease;
@@ -150,7 +177,7 @@ h6 {
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
-  color: var(--violet);
+  color: var(--secondary-violet);
   background-color: var(--light-violet-low-opacity);
   border: none;
   transition: background-color 0.3s ease;
@@ -172,10 +199,30 @@ h6 {
   font-size: bigger;
 }
 
+ul {
+  margin-right: 10px;
+}
+
+li::marker {
+  color: var(--violet);
+  line-height: 2.5;
+}
+
 .what-you-will-do-list li::marker {
-  color: var(--violet); /* Set the color of the numbers to purple */
+  /* Set the color of the numbers to purple */
   font-size: 1.3rem; /* Increase the font size of the numbers */
   padding-right: 10px;
+}
+
+.top-section img {
+  height: 140px;
+}
+.footer-expandedJobDescription {
+  background-color: var(--white);
+  margin-left: 0px;
+  margin-top: auto; /* Push the footer to the bottom */
+  width: 100%;
+  color: var(--gray);
 }
 
 .job-description-section p,
@@ -183,16 +230,6 @@ h6 {
 .footer-expandedJobDescription p {
   color: var(--dark-grey);
   font-weight: 300;
-}
-
-.top-section img {
-  height: 140px;
-}
-.footer-expandedJobDescription {
-  background-color: white;
-  margin-left: 0px;
-  margin-top: auto; /* Push the footer to the bottom */
-  width: 100%;
 }
 
 .home-button {
@@ -235,6 +272,9 @@ h6 {
     padding: 20px;
     margin-left: 20px;
     margin-right: 20px;
+  }
+  .company-link-style-job-description {
+    color: var(--gray) !important;
   }
   .top-section .col-md-3 img {
     margin: auto;
